very strange bug - extra space at end of <html>, not sure what to do

--- a/base.css
+++ b/base.css
@@ -23,7 +23,7 @@ a:visited {
 #header {
   /* position: fixed; */
   height: 50px;
-  width: 100%;
+  min-width: 100%;
   background-color: white;
 }
 
